#pragma once

namespace Platformer {

class MenuBackground {
public:
    static void render();
};

} // namespace Platformer
